# appEcosystem

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  ECOSYSTEM_AI_PLAN.md  ECOSYSTEM_AUDIT.md  ECOSYSTEM_OPENING_PLAN.md  INSTALL_REMEDIATION_PLAN.md  PUBLISHING.md  README.md  ecosystem.yaml  overview.rtf  package-lock.json  package.json  pyproject.toml  todos_changelog.md  usage.md
auth/python/: pyproject.toml
auth/python/ecosystem_auth/: __init__.py  middleware.py  setup.py  tokens.py
cli/: __init__.py  __main__.py  commands.py  main.py
ecosystem_client/: __init__.py  config.py  discovery.py  event_publisher.py  event_subscriber.py  log_handler.py  match.py  peer.py  topology.py
ecosystem_client_js/: package.json
events/: __init__.py  event_bus.py  event_types.py  schemas.py
llm/: __init__.py  command_router.py  discovery_agent.py  project_manifest.py
pytest-of-mikelsmart/: pytest-current
registry/: __init__.py  app.py  app_store.py  credential_store.py  discovery.py  health_monitor.py  logging_config.py  metrics.py  models.py  placement.py  profile_store.py  registry.py
scripts/: check-js-client-parity.sh  fetch_fonts.py  install-local.sh  install.sh  install_systemd.sh  process_manager.py  smoke-ecosystem.sh  smoke_ecosystem.py  start_all.sh  stop_all.sh  sync-clients.sh  uninstall-keep-data.sh  uninstall.sh  uninstall_systemd.sh
tests/: conftest.py  test_app_store.py  test_auth.py  test_cli.py  test_client.py  test_client_auth_dependency.py  test_command_router.py  test_config.py  test_credential_store.py  test_discovery.py  test_event_publisher.py  (+16 more)
(+690 files in other folders)
