[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app-ecosystem"
version = "0.3.0"
description = "Lightweight coordination layer for the app ecosystem"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "zeroconf>=0.80.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx>=0.24"]

[project.scripts]
ecosystem = "cli.main:main"

[tool.setuptools.packages.find]
include = ["cli*", "ecosystem_client*", "events*", "llm*", "registry*"]
