[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ecosystem-auth"
version = "0.1.0"
description = "Shared HMAC-SHA256 authentication for the app ecosystem"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.100.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]
