[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecosystem-auth"
version = "0.3.0"
description = "Shared HMAC-SHA256 authentication for the app ecosystem"
requires-python = ">=3.9"
dependencies = ["fastapi>=0.100.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ecosystem_auth*"]
